# 3-python-package-pypacks

./: Pipfile  README.md  pyproject.toml
src/package/: example_functions.py  fullToSlang.py  slangToEmoji.py  translations.py
src/pytoslang/: SlangToFull.py  __init__.py  example_functions.py  fullToSlang.py  translations.py
tests/: test_translator.py  translator_tests.py
