[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
description = "A Python package that translates slang and text abbreviations into standard English, making informal messages more understandable. Developed with pipenv, built using setuptools, tested with pytest, and uploaded to PyPI using twine."
version = "1.0.1"

authors = [
  { name="Ajok Thon", email="at4933@nyu.edu" },
  { name="Nyjur Majok", email="ntm7075@nyu.edu" },
  { name = Arkadiuz Mercado, email= aam9704@nyu.edu},
  { name = Isaac Vivar, email = iv2050@nyu.edu}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-pypacks"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-pypacks"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-pypacks/issues"

[project.scripts]
package = "package.__main__:main"

